--- a/css/style.css
+++ b/css/style.css
@@ -27,25 +27,54 @@ html, body {
 	transition: all 1s;
 }
 
+#player .card {
+	left: 0;
+}
+
+#computer .card {
+	right: 0;
+}
+
 .card > div {
-	text-align: center;
 	backface-visibility: hidden;
 	transition: all 1s;
 }
 
 .card span {
 	display: block;
-	width: 50px;
+	width: 70px;
 	font-family: Arial;
 	font-size: 11px;
-	text-transform: lowercase;
+	padding: 2px 10px;
+}
+
+.card .card-name {
+	text-align: center;
+	font-size: 15px;
+	margin-bottom: 10px;
+}
+
+.card span:not(.card-name) {
+	text-align: right;
+	background: #ccf;
+	margin: 5px 0;
+	cursor: pointer;
+}
+
+.card span:not(.card-name):before {
+	content: attr(class) ": ";
+	float: left;
+}
+
+.card span:not(.card-name):hover {
+	background: #bbf;
 }
 
 .card .front {
 	position: relative;
 	z-index: 2;
 	background: #ccc;
-	padding: 0.5em 1em;
+	padding: 0.5em;
 	border: 0.5em solid #aaa;
 	visibility: hidden;
 	transform: rotateY(180deg);
@@ -55,6 +84,7 @@ html, body {
 	position: absolute;
 	background: linear-gradient(to bottom, #c0c0c0, #efefef);;
 	transform: rotateY(0);
+	border: 1px solid #666;
 	top: 0;
 	bottom: 0;
 	left: 0;
@@ -65,6 +95,14 @@ html, body {
 .flipped {
 	top: 100px;
 	z-index: 2;
+}
+
+#player .flipped {
+	left: 20px;
+}
+
+#computer .flipped {
+	right: 20px;
 }
 
 .flipped .front {
