--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,63 @@
 html, body {
 	margin: 0;
-	padding: 0;
+	padding: 0;	
+	height: 100%;
+	min-height: 100%;
 	background: green;
+}
+
+#wrapper {
+	height: 100%;
+	width: 800px;
+	height: 600px;
+	margin: 0 auto;
+	position: relative;
+	border: 1px solid black;
 }
 
 h1 {
 	color: #fff;
 	text-align: center;
+	margin: 0;
+	padding: 50px 0;
 }
 
 .deck {
 	position: absolute;
 	width: 10%;
 	list-style: none;
+	width: 45px;
+	height: 120px;
 	margin: 0;
 	padding: 0;
+	bottom: 10%;
 }
 
 #player {
-	left: 30%;
+	left: 15%;
 }
 
 #computer {
-	right: 30%;
+	right: 15%;
 }
 
 .card {
 	position: absolute;
-	top: 0;
+	bottom: 0;
 	z-index: 1;
+	width: 100%;
+	height: 100%;
 	transition: all 1s;
 }
 
 #player .card {
 	left: 0;
+	transform: perspective(300px) rotateX(70deg) skewX(-20deg);
 }
 
 #computer .card {
 	right: 0;
+	transform: perspective(300px) rotateX(70deg) skewX(20deg);
 }
 
 .card > div {
@@ -47,7 +67,6 @@ h1 {
 
 .card span {
 	display: block;
-	width: 70px;
 	font-family: Arial;
 	font-size: 11px;
 	padding: 2px 10px;
@@ -63,26 +82,35 @@ h1 {
 	text-align: right;
 	background: #ccf;
 	margin: 5px 0;
+}
+
+#player .card span:not(.card-name) {
 	cursor: pointer;
 }
 
 .card span:not(.card-name):before {
-	content: attr(class) ": ";
+	content: attr(class);
 	float: left;
 }
 
-.card span:not(.card-name):hover {
+#player .card span:not(.card-name):hover {
 	background: #bbf;
 }
 
 .card .front {
 	position: relative;
 	z-index: 2;
-	background: #ccc;
-	padding: 0.5em;
-	border: 0.5em solid #aaa;
 	visibility: hidden;
+	width: 100%;
+	height: 100%;
 	transform: rotateY(180deg);
+}
+
+.card .front-inner {
+	border: 5px solid #ccc6bd;
+	background: #ece8dd;
+	height: 97%;
+	border-radius: 10px;
 }
 
 .card .cover {
@@ -96,19 +124,24 @@ h1 {
 	left: 0;
 	right: 0;
 	z-index: 1;
+	border-radius: 5px;
 }
 
 .flipped {
-	top: 100px;
+	width: 180px;
+	height: 365px;
+	bottom: 65px;
 	z-index: 2;
 }
 
 #player .flipped {
-	left: 20px;
+	left: 70px;
+	transform: rotateX(0deg) skewX(0deg);
 }
 
 #computer .flipped {
-	right: 20px;
+	right: 70px;
+	transform: rotateX(0deg) skewX(0deg);
 }
 
 .flipped .front {
@@ -126,6 +159,8 @@ h1 {
 	cursor: pointer;
 	color: #fff;
 	margin: 0 auto;
-	display: block;
-	width: auto;
+	width: 100px;
+	position: absolute;
+	left: 50%;
+	margin-left: -50px;
 }
