adding players images, styles and scripts

--- a/css/style.css
+++ b/css/style.css
@@ -220,3 +220,68 @@ h1 {
 .modal-option {
 	cursor: pointer;
 }
+
+.asamoahgyan.left-player 		{background-image: url(../img/players/asamoahgyan_dl.png)}
+.asamoahgyan.right-player 		{background-image: url(../img/players/asamoahgyan_el.png)}
+.bengtson.left-player 			{background-image: url(../img/players/bengtson_dl.png)}
+.bengtson.right-player 			{background-image: url(../img/players/bengtson_el.png)}
+.bryanruiz.left-player 		{background-image: url(../img/players/bryanruiz_dl.png)}
+.bryanruiz.right-player 		{background-image: url(../img/players/bryanruiz_el.png)}
+.cahill.left-player 			{background-image: url(../img/players/cahill_dl.png)}
+.cahill.right-player 			{background-image: url(../img/players/cahill_el.png)}
+.donovan.left-player 			{background-image: url(../img/players/donovan_dl.png)}
+.donovan.right-player 			{background-image: url(../img/players/donovan_el.png)}
+.edindzeko.left-player 			{background-image: url(../img/players/edindzeko_dl.png)}
+.edindzeko.right-player 		{background-image: url(../img/players/edindzeko_el.png)}
+.etoo.left-player 				{background-image: url(../img/players/etoo_dl.png)}
+.etoo.right-player 				{background-image: url(../img/players/etoo_el.png)}
+.falcaogarcia.left-player 		{background-image: url(../img/players/falcaogarcia_dl.png)}
+.falcaogarcia.right-player 	{background-image: url(../img/players/falcaogarcia_el.png)}
+.feghouli.left-player 			{background-image: url(../img/players/feghouli_dl.png)}
+.feghouli.right-player 			{background-image: url(../img/players/feghouli_el.png)}
+.heungminson.left-player 		{background-image: url(../img/players/heungminson_dl.png)}
+.heungminson.right-player 		{background-image: url(../img/players/heungminson_el.png)}
+.iniesta.left-player 			{background-image: url(../img/players/iniesta_dl.png)}
+.iniesta.right-player 			{background-image: url(../img/players/iniesta_el.png)}
+.kagawa.left-player 			{background-image: url(../img/players/kagawa_dl.png)}
+.kagawa.right-player 			{background-image: url(../img/players/kagawa_el.png)}
+.kompany.left-player 			{background-image: url(../img/players/kompany_dl.png)}
+.kompany.right-player 			{background-image: url(../img/players/kompany_el.png)}
+.messi.left-player 				{background-image: url(../img/players/messi_dl.png)}
+.messi.right-player 			{background-image: url(../img/players/messi_el.png)}
+.mikel.left-player 				{background-image: url(../img/players/mikel_dl.png)}
+.mikel.right-player 			{background-image: url(../img/players/mikel_el.png)}
+.modric.left-player 			{background-image: url(../img/players/modric_dl.png)}
+.modric.right-player 			{background-image: url(../img/players/modric_el.png)}
+.nekounam.left-player 			{background-image: url(../img/players/nekounam_dl.png)}
+.nekounam.right-player 			{background-image: url(../img/players/nekounam_el.png)}
+.neuer.left-player 				{background-image: url(../img/players/neuer_dl.png)}
+.neuer.right-player 			{background-image: url(../img/players/neuer_el.png)}
+.neymar.left-player 			{background-image: url(../img/players/neymar_dl.png)}
+.neymar.right-player 			{background-image: url(../img/players/neymar_el.png)}
+.noboa.left-player 				{background-image: url(../img/players/noboa_dl.png)}
+.noboa.right-player 			{background-image: url(../img/players/noboa_el.png)}
+.papastathopoulos.left-player 	{background-image: url(../img/players/papastathopoulos_dl.png)}
+.papastathopoulos.right-player 	{background-image: url(../img/players/papastathopoulos_el.png)}
+.pirlo.left-player 				{background-image: url(../img/players/pirlo_dl.png)}
+.pirlo.right-player 			{background-image: url(../img/players/pirlo_el.png)}
+.rafaelmrquez.left-player 	{background-image: url(../img/players/rafaelmarquez_dl.png)}
+.rafaelmrquez.right-player 	{background-image: url(../img/players/rafaelmarquez_el.png)}
+.ribry.left-player 				{background-image: url(../img/players/ribery_dl.png)}
+.ribry.right-player 			{background-image: url(../img/players/ribery_el.png)}
+.ronaldo.left-player 			{background-image: url(../img/players/ronaldo_dl.png)}
+.ronaldo.right-player 			{background-image: url(../img/players/ronaldo_el.png)}
+.rooney.left-player 			{background-image: url(../img/players/rooney_dl.png)}
+.rooney.right-player 			{background-image: url(../img/players/rooney_el.png)}
+.samedov.left-player 			{background-image: url(../img/players/samedov_dl.png)}
+.samedov.right-player 			{background-image: url(../img/players/samedov_el.png)}
+.shaqiri.left-player 			{background-image: url(../img/players/shaqiri_dl.png)}
+.shaqiri.right-player 			{background-image: url(../img/players/shaqiri_el.png)}
+.surez.left-player 				{background-image: url(../img/players/suarez_dl.png)}
+.surez.right-player 			{background-image: url(../img/players/suarez_el.png)}
+.tour.left-player 				{background-image: url(../img/players/toure_dl.png)}
+.tour.right-player 				{background-image: url(../img/players/toure_el.png)}
+.vanpersie.left-player 		{background-image: url(../img/players/vanpersie_dl.png)}
+.vanpersie.right-player 		{background-image: url(../img/players/vanpersie_el.png)}
+.vidal.left-player 				{background-image: url(../img/players/vidal_dl.png)}
+.vidal.right-player 			{background-image: url(../img/players/vidal_el.png)}
