--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ h1 {
 	font-size: 14px;
 	margin: 10px 0;
 	color: #fff;
-	background: url("../img/sample-card-name.png") no-repeat center top;
+	background: url("../img/card-names-spr.png") no-repeat;
 	height: 23px;
 	line-height: 20px;
 }
@@ -221,67 +221,114 @@ h1 {
 	cursor: pointer;
 }
 
-.asamoahgyan.left-player 		{background-image: url(../img/players/asamoahgyan_dl.png)}
-.asamoahgyan.right-player 		{background-image: url(../img/players/asamoahgyan_el.png)}
-.bengtson.left-player 			{background-image: url(../img/players/bengtson_dl.png)}
-.bengtson.right-player 			{background-image: url(../img/players/bengtson_el.png)}
-.bryanruiz.left-player 		{background-image: url(../img/players/bryanruiz_dl.png)}
-.bryanruiz.right-player 		{background-image: url(../img/players/bryanruiz_el.png)}
-.cahill.left-player 			{background-image: url(../img/players/cahill_dl.png)}
-.cahill.right-player 			{background-image: url(../img/players/cahill_el.png)}
-.donovan.left-player 			{background-image: url(../img/players/donovan_dl.png)}
-.donovan.right-player 			{background-image: url(../img/players/donovan_el.png)}
-.edindzeko.left-player 			{background-image: url(../img/players/edindzeko_dl.png)}
-.edindzeko.right-player 		{background-image: url(../img/players/edindzeko_el.png)}
-.etoo.left-player 				{background-image: url(../img/players/etoo_dl.png)}
-.etoo.right-player 				{background-image: url(../img/players/etoo_el.png)}
-.falcaogarcia.left-player 		{background-image: url(../img/players/falcaogarcia_dl.png)}
-.falcaogarcia.right-player 	{background-image: url(../img/players/falcaogarcia_el.png)}
-.feghouli.left-player 			{background-image: url(../img/players/feghouli_dl.png)}
-.feghouli.right-player 			{background-image: url(../img/players/feghouli_el.png)}
-.heungminson.left-player 		{background-image: url(../img/players/heungminson_dl.png)}
-.heungminson.right-player 		{background-image: url(../img/players/heungminson_el.png)}
-.iniesta.left-player 			{background-image: url(../img/players/iniesta_dl.png)}
-.iniesta.right-player 			{background-image: url(../img/players/iniesta_el.png)}
-.kagawa.left-player 			{background-image: url(../img/players/kagawa_dl.png)}
-.kagawa.right-player 			{background-image: url(../img/players/kagawa_el.png)}
-.kompany.left-player 			{background-image: url(../img/players/kompany_dl.png)}
-.kompany.right-player 			{background-image: url(../img/players/kompany_el.png)}
-.messi.left-player 				{background-image: url(../img/players/messi_dl.png)}
-.messi.right-player 			{background-image: url(../img/players/messi_el.png)}
-.mikel.left-player 				{background-image: url(../img/players/mikel_dl.png)}
-.mikel.right-player 			{background-image: url(../img/players/mikel_el.png)}
-.modric.left-player 			{background-image: url(../img/players/modric_dl.png)}
-.modric.right-player 			{background-image: url(../img/players/modric_el.png)}
-.nekounam.left-player 			{background-image: url(../img/players/nekounam_dl.png)}
-.nekounam.right-player 			{background-image: url(../img/players/nekounam_el.png)}
-.neuer.left-player 				{background-image: url(../img/players/neuer_dl.png)}
-.neuer.right-player 			{background-image: url(../img/players/neuer_el.png)}
-.neymar.left-player 			{background-image: url(../img/players/neymar_dl.png)}
-.neymar.right-player 			{background-image: url(../img/players/neymar_el.png)}
-.noboa.left-player 				{background-image: url(../img/players/noboa_dl.png)}
-.noboa.right-player 			{background-image: url(../img/players/noboa_el.png)}
-.papastathopoulos.left-player 	{background-image: url(../img/players/papastathopoulos_dl.png)}
-.papastathopoulos.right-player 	{background-image: url(../img/players/papastathopoulos_el.png)}
-.pirlo.left-player 				{background-image: url(../img/players/pirlo_dl.png)}
-.pirlo.right-player 			{background-image: url(../img/players/pirlo_el.png)}
-.rafaelmrquez.left-player 	{background-image: url(../img/players/rafaelmarquez_dl.png)}
-.rafaelmrquez.right-player 	{background-image: url(../img/players/rafaelmarquez_el.png)}
-.ribry.left-player 				{background-image: url(../img/players/ribery_dl.png)}
-.ribry.right-player 			{background-image: url(../img/players/ribery_el.png)}
-.ronaldo.left-player 			{background-image: url(../img/players/ronaldo_dl.png)}
-.ronaldo.right-player 			{background-image: url(../img/players/ronaldo_el.png)}
-.rooney.left-player 			{background-image: url(../img/players/rooney_dl.png)}
-.rooney.right-player 			{background-image: url(../img/players/rooney_el.png)}
-.samedov.left-player 			{background-image: url(../img/players/samedov_dl.png)}
-.samedov.right-player 			{background-image: url(../img/players/samedov_el.png)}
-.shaqiri.left-player 			{background-image: url(../img/players/shaqiri_dl.png)}
-.shaqiri.right-player 			{background-image: url(../img/players/shaqiri_el.png)}
-.surez.left-player 				{background-image: url(../img/players/suarez_dl.png)}
-.surez.right-player 			{background-image: url(../img/players/suarez_el.png)}
-.tour.left-player 				{background-image: url(../img/players/toure_dl.png)}
-.tour.right-player 				{background-image: url(../img/players/toure_el.png)}
-.vanpersie.left-player 		{background-image: url(../img/players/vanpersie_dl.png)}
-.vanpersie.right-player 		{background-image: url(../img/players/vanpersie_el.png)}
-.vidal.left-player 				{background-image: url(../img/players/vidal_dl.png)}
-.vidal.right-player 			{background-image: url(../img/players/vidal_el.png)}
+#round-confirm-modal {
+	position: absolute;
+	z-index: 3;
+	top: 50%;
+	left: 50%;
+	width: 100px;
+	margin-left: -50px;
+	height: 50px;
+	background-color: red;
+}
+
+.asamoahgyan 		.card-name{background-position: -176px -504px}
+.bengtson 			.card-name{background-position: -176px -396px}
+.bryanruiz 			.card-name{background-position:    4px -144px}
+.cahill 			.card-name{background-position:    4px -252px}
+.donovan 			.card-name{background-position: -176px -108px}
+.edindzeko 			.card-name{background-position:    4px -396px}
+.etoo 				.card-name{background-position:    4px -360px}
+.falcaogarcia 		.card-name{background-position:    4px -288px}
+.feghouli 			.card-name{background-position: -176px -431px}
+.heungminson 		.card-name{background-position: -176px -468px}
+.iniesta 			.card-name{background-position:    4px -468px}
+.kagawa 			.card-name{background-position: -176px      0}
+.kompany 			.card-name{background-position:    4px -108px}
+.messi 				.card-name{background-position:    4px  -37px}
+.mikel 				.card-name{background-position: -176px -324px}
+.modric 			.card-name{background-position:    4px -324px}
+.nekounam 			.card-name{background-position: -176px -288px}
+.neuer 				.card-name{background-position: -176px  -37px}
+.neymar 			.card-name{background-position: -176px -216px}
+.noboa 				.card-name{background-position: -176px  -72px}
+.papastathopoulos 	.card-name{background-position: -176px -539px}
+.pirlo 				.card-name{background-position:    4px -539px}
+.rafaelmrquez 		.card-name{background-position:    4px -180px}
+.ribry  			.card-name{background-position:    4px  -72px}
+.ronaldo 			.card-name{background-position: -176px -252px}
+.rooney 			.card-name{background-position: -176px -180px}
+.samedov 			.card-name{background-position: -176px -360px}
+.shaqiri  			.card-name{background-position:    4px -216px}
+.surez 				.card-name{background-position:    4px -431px}
+.tour 				.card-name{background-position: -176px -144px}
+.vanpersie 			.card-name{background-position:    4px      0}
+.vidal 				.card-name{background-position:    4px -504px}
+
+
+
+
+.asamoahgyan .left-player 		{background-image: url(../img/players/asamoahgyan_dl.png)}
+.asamoahgyan .right-player 		{background-image: url(../img/players/asamoahgyan_el.png)}
+.bengtson .left-player 			{background-image: url(../img/players/bengtson_dl.png)}
+.bengtson .right-player 			{background-image: url(../img/players/bengtson_el.png)}
+.bryanruiz .left-player 		{background-image: url(../img/players/bryanruiz_dl.png)}
+.bryanruiz .right-player 		{background-image: url(../img/players/bryanruiz_el.png)}
+.cahill .left-player 			{background-image: url(../img/players/cahill_dl.png)}
+.cahill .right-player 			{background-image: url(../img/players/cahill_el.png)}
+.donovan .left-player 			{background-image: url(../img/players/donovan_dl.png)}
+.donovan .right-player 			{background-image: url(../img/players/donovan_el.png)}
+.edindzeko .left-player 			{background-image: url(../img/players/edindzeko_dl.png)}
+.edindzeko .right-player 		{background-image: url(../img/players/edindzeko_el.png)}
+.etoo .left-player 				{background-image: url(../img/players/etoo_dl.png)}
+.etoo .right-player 				{background-image: url(../img/players/etoo_el.png)}
+.falcaogarcia .left-player 		{background-image: url(../img/players/falcaogarcia_dl.png)}
+.falcaogarcia .right-player 	{background-image: url(../img/players/falcaogarcia_el.png)}
+.feghouli .left-player 			{background-image: url(../img/players/feghouli_dl.png)}
+.feghouli .right-player 			{background-image: url(../img/players/feghouli_el.png)}
+.heungminson .left-player 		{background-image: url(../img/players/heungminson_dl.png)}
+.heungminson .right-player 		{background-image: url(../img/players/heungminson_el.png)}
+.iniesta .left-player 			{background-image: url(../img/players/iniesta_dl.png)}
+.iniesta .right-player 			{background-image: url(../img/players/iniesta_el.png)}
+.kagawa .left-player 			{background-image: url(../img/players/kagawa_dl.png)}
+.kagawa .right-player 			{background-image: url(../img/players/kagawa_el.png)}
+.kompany .left-player 			{background-image: url(../img/players/kompany_dl.png)}
+.kompany .right-player 			{background-image: url(../img/players/kompany_el.png)}
+.messi .left-player 				{background-image: url(../img/players/messi_dl.png)}
+.messi .right-player 			{background-image: url(../img/players/messi_el.png)}
+.mikel .left-player 				{background-image: url(../img/players/mikel_dl.png)}
+.mikel .right-player 			{background-image: url(../img/players/mikel_el.png)}
+.modric .left-player 			{background-image: url(../img/players/modric_dl.png)}
+.modric .right-player 			{background-image: url(../img/players/modric_el.png)}
+.nekounam .left-player 			{background-image: url(../img/players/nekounam_dl.png)}
+.nekounam .right-player 			{background-image: url(../img/players/nekounam_el.png)}
+.neuer .left-player 				{background-image: url(../img/players/neuer_dl.png)}
+.neuer .right-player 			{background-image: url(../img/players/neuer_el.png)}
+.neymar .left-player 			{background-image: url(../img/players/neymar_dl.png)}
+.neymar .right-player 			{background-image: url(../img/players/neymar_el.png)}
+.noboa .left-player 				{background-image: url(../img/players/noboa_dl.png)}
+.noboa .right-player 			{background-image: url(../img/players/noboa_el.png)}
+.papastathopoulos .left-player 	{background-image: url(../img/players/papastathopoulos_dl.png)}
+.papastathopoulos .right-player 	{background-image: url(../img/players/papastathopoulos_el.png)}
+.pirlo .left-player 				{background-image: url(../img/players/pirlo_dl.png)}
+.pirlo .right-player 			{background-image: url(../img/players/pirlo_el.png)}
+.rafaelmrquez .left-player 	{background-image: url(../img/players/rafaelmarquez_dl.png)}
+.rafaelmrquez .right-player 	{background-image: url(../img/players/rafaelmarquez_el.png)}
+.ribry .left-player 				{background-image: url(../img/players/ribery_dl.png)}
+.ribry .right-player 			{background-image: url(../img/players/ribery_el.png)}
+.ronaldo .left-player 			{background-image: url(../img/players/ronaldo_dl.png)}
+.ronaldo .right-player 			{background-image: url(../img/players/ronaldo_el.png)}
+.rooney .left-player 			{background-image: url(../img/players/rooney_dl.png)}
+.rooney .right-player 			{background-image: url(../img/players/rooney_el.png)}
+.samedov .left-player 			{background-image: url(../img/players/samedov_dl.png)}
+.samedov .right-player 			{background-image: url(../img/players/samedov_el.png)}
+.shaqiri .left-player 			{background-image: url(../img/players/shaqiri_dl.png)}
+.shaqiri .right-player 			{background-image: url(../img/players/shaqiri_el.png)}
+.surez .left-player 				{background-image: url(../img/players/suarez_dl.png)}
+.surez .right-player 			{background-image: url(../img/players/suarez_el.png)}
+.tour .left-player 				{background-image: url(../img/players/toure_dl.png)}
+.tour .right-player 				{background-image: url(../img/players/toure_el.png)}
+.vanpersie .left-player 		{background-image: url(../img/players/vanpersie_dl.png)}
+.vanpersie .right-player 		{background-image: url(../img/players/vanpersie_el.png)}
+.vidal .left-player 				{background-image: url(../img/players/vidal_dl.png)}
+.vidal .right-player 			{background-image: url(../img/players/vidal_el.png)}
