--- a/css/style.css
+++ b/css/style.css
@@ -6,38 +6,27 @@ html, body {
 	background: green;
 }
 
-@font-face {
-	font-family: lobster;
-	src: url(../fonts/lobster1.4.otf);
-}
-
 .display-none {display: none}
 
 #wrapper {
 	height: 100%;
-	width: 800px;
-	height: 600px;
-	margin: 0 auto;
+	width: 100%;
+	max-width: 1000px;
+	max-height: 800px;
 	position: relative;
-	border: 1px solid black;
+	margin: 0 auto;
 }
 
 .field-image {
 	background: url('../img/field.png') no-repeat center bottom;
 }
 
-h1 {
-	color: #fff;
-	text-align: center;
-	margin: 0;
-	/*padding: 50px 0;*/
-}
-
 #logo {
 	width: 279px;
 	height: 278px;
 	margin: 0 auto;
-	background-image: url('../img/title-logo.png')
+	background-image: url('../img/title-logo.png');
+	font-size: 0px;
 }
 
 .deck {
@@ -188,7 +177,7 @@ h1 {
 
 .flipped {
 	width: 194px;
-	height: 375px;
+	height: 395px;
 	bottom: 65px;
 	z-index: 2;
 }
@@ -212,18 +201,6 @@ h1 {
 	transform: rotateY(-180deg);
 }
 
-#start {
-	background: none;
-	border: none;
-	cursor: pointer;
-	color: #fff;
-	margin: 0 auto;
-	width: 100px;
-	position: absolute;
-	left: 50%;
-	margin-left: -50px;
-}
-
 #start-modal {
 	/*position: absolute;*/
 	top: 300px;
@@ -234,25 +211,6 @@ h1 {
 	background-color: #00AC00; /*just kidding, this value is awful*/
 	margin: 0 auto;
 	box-shadow: 5px 5px;
-}
-
-.start-label {
-	font-size: 43px;
-	color: #fff;
-	margin: 10px 0 0 100px;
-	display: block;
-	float: left;
-	/*font-family: lobster;*/
-	/*text-transform: uppercase;*/
-}
-
-.start-image {
-	height: 74px;
-	width: 90px;
-	margin-right: 20px;
-	display: block;
-	float: right;
-	background: url('../img/players.png') no-repeat;
 }
 
 .start-options-list{
@@ -266,6 +224,26 @@ h1 {
 	background-image: url('../img/pennant-opening.png');
 	height: 92px;
 	cursor: pointer;
+	text-indent: 100px;
+}
+
+.start-label {
+	font-size: 40px;
+	line-height: 70px;
+	color: #fff;
+	display: block;
+	float: left;
+	font-family: 'Lobster', cursive;
+	text-transform: uppercase;
+}
+
+.start-image {
+	height: 74px;
+	width: 90px;
+	margin-right: 20px;
+	display: block;
+	float: right;
+	background: url('../img/players.png') no-repeat;
 }
 
 .start-play {
