--- a/css/style.css
+++ b/css/style.css
@@ -295,6 +295,22 @@ html, body {
 	float: right;
 }
 
+.card-1   {bottom: 2px;}
+.card-2   {bottom: 4px;}
+.card-3   {bottom: 6px;}
+.card-4   {bottom: 8px;}
+.card-5   {bottom: 10px;}
+.card-6   {bottom: 12px;}
+.card-7   {bottom: 14px;}
+.card-8   {bottom: 16px;}
+.card-9   {bottom: 18px;}
+.card-10 {bottom: 20px;}
+.card-11 {bottom: 22px;}
+.card-12 {bottom: 24px;}
+.card-13 {bottom: 26px;}
+.card-14 {bottom: 28px;}
+.card-15 {bottom: 30px;}
+
 
 .asamoahgyan 		.card-name{background-position: -176px -504px}
 .bengtson 			.card-name{background-position: -176px -396px}
