adding data on title, separating by group, adding styles

--- a/css/gallery-style.css
+++ b/css/gallery-style.css
@@ -12,7 +12,7 @@ html, body {
 
 h1 {
 	color: #fff;
-	
+	font-size: 50px;
 	text-align: center;
 }
 
@@ -103,8 +103,9 @@ p {
 
 .gallery-list {
 	overflow: auto;
-	margin: 0;
-	padding: 40px 0 0 0;
+	margin: 0 0 0 0;
+	padding-top: 70px;
+	position: relative;
 }
 
 .card {
@@ -116,7 +117,7 @@ p {
 	transition: all 1s;
 	overflow: hidden;
 	float: left;
-	margin: 0 20px 0 0;
+	margin: 0 20px 20px 0;
 }
 
 #player .card {
@@ -276,21 +277,7 @@ p {
 	position: relative;
 }
 
-.card-1   {bottom: 2px;}
-.card-2   {bottom: 4px;}
-.card-3   {bottom: 6px;}
-.card-4   {bottom: 8px;}
-.card-5   {bottom: 10px;}
-.card-6   {bottom: 12px;}
-.card-7   {bottom: 14px;}
-.card-8   {bottom: 16px;}
-.card-9   {bottom: 18px;}
-.card-10 {bottom: 20px;}
-.card-11 {bottom: 22px;}
-.card-12 {bottom: 24px;}
-.card-13 {bottom: 26px;}
-.card-14 {bottom: 28px;}
-.card-15 {bottom: 30px;}
+
 
 
 .asamoahgyan 		.card-name{background-position: -176px -504px}
