--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,16 @@
 html, body {
 	margin: 0;
 	padding: 0;	
-	height: 100%;
-	min-height: 100%;
+	min-height: 600px;
 	background: #006838; /* Old browsers */
 	background: -webkit-radial-gradient(top, ellipse cover,  #39b54a 0%, #006838 70%); /* Chrome10+,Safari5.1+ */
 	background: -o-radial-gradient(top, ellipse cover,  #39b54a 0%, #006838 70%); /* Opera 12+ */
 	background: -ms-radial-gradient(top, ellipse cover,  #39b54a 0%, #006838 70%); /* IE10+ */
 	background: radial-gradient(ellipse at top,  #39b54a 0%, #006838 70%); /* W3C */
+}
+
+body {
+	background: transparent;
 }
 
 p {
@@ -21,9 +24,9 @@ p {
 #wrapper {
 	width: 100%;
 	max-width: 1000px;
-	height: 100%;
-	max-height: 800px;
+	min-height: 600px;
 	position: relative;
+	top: 0;
 	margin: 0 auto;
 }
 
@@ -32,7 +35,8 @@ p {
 	width: 120px;
 	height: 60px;
 	top: 0;
-	right: 0;
+	right: 200px;
+	z-index: 4;
 }
 
 .game-general-options .general-option-button {
@@ -108,11 +112,13 @@ p {
 #player .card {
 	left: 0;
 	transform: perspective(500px) rotateX(50deg) skewX(-23deg);
+	-webkit-transform: perspective(500px) rotateX(50deg) skewX(-23deg);
 }
 
 #computer .card {
 	right: 0;
 	transform: perspective(500px) rotateX(50deg) skewX(23deg);
+	-webkit-transform: perspective(500px) rotateX(50deg) skewX(23deg);
 }
 
 .card > div {
@@ -199,6 +205,7 @@ p {
 	width: 100%;
 	height: 100%;
 	transform: rotateY(180deg);
+	-webkit-transform: rotateY(180deg);
 }
 
 .card .front-inner {
@@ -213,6 +220,7 @@ p {
 	background: #c0c0c0;
 	background: linear-gradient(to bottom, #c0c0c0, #efefef);;
 	transform: rotateY(0);
+	-webkit-transform: rotateY(0);
 	border: 1px solid #666;
 	top: 0;
 	bottom: 0;
@@ -232,20 +240,24 @@ p {
 #player .flipped {
 	left: 100px;
 	transform: rotateX(0deg) skewX(0deg);
+	-webkit-transform: rotateX(0deg) skewX(0deg);
 }
 
 #computer .flipped {
 	right: 100px;
 	transform: rotateX(0deg) skewX(0deg);
+	-webkit-transform: rotateX(0deg) skewX(0deg);
 }
 
 .flipped .front {
 	transform: rotateY(0);
+	-webkit-transform: rotateY(0);
 	visibility: visible;
 }
 
 .flipped .cover {
 	transform: rotateY(-180deg);
+	-webkit-transform: rotateY(-180deg);
 }
 
 #start-modal {
@@ -368,8 +380,7 @@ p {
 	left: 50%;
 	width: 100px;
 	margin-left: -100px;
-	height: 50px;
-	/*background-color: red;*/
+	height: 30px;
 }
 
 .looser {
@@ -386,12 +397,13 @@ p {
 
 .ok-button {
 	width: 200px;
-	height: 200px;
+	height: 100px;
 	font-size: 50px;
 }
 
 .score-container {
 	height: 74px;
+	margin-top: 70px;
 }
 
 .score-display {
@@ -420,6 +432,7 @@ p {
 	margin-left: 12px;
 	line-height: 70px;
 	text-align: center;
+	color: #006838;
 }
 
 .score-user .score-number {
@@ -432,25 +445,39 @@ p {
 	margin-left: 10px;
 }
 
+.score-name {
+	display: block;
+	float: left;
+	height: 74px;
+	color: #fff;
+	font-size: 28px;
+	font-family: 'Lobster Regular', ;
+}
+
+.player-name {
+	margin: 17px 0 0 61px;
+	float: left;
+}
+
+.pc-name {
+	margin: 17px 61px 0 0;
+	float: right;
+}
+
 .card .highlighted-attribute {
 	background-color: red;
 }
 
-#player .card .highlighted-attribute:hover {
-	background: red;
-}
 
-#player .card .highlighted-attribute:hover:before {
-	background: red;
-}
 
-#share-wrapper {
+#share-wrapper { 
 	background-color: #fff;
-	margin: 40px auto 0 auto;
+	margin: 40px auto 20px auto;
 	min-height: 625px;
 	padding: 12px 0 0 12px;
 	width: 463px;
 	position: relative;
+	box-shadow: #231f20 5px 5px;
 }
 
 #share-zh-logo {
@@ -567,6 +594,12 @@ p {
 	float: left;
 	cursor: pointer;
 	background-image: url('../img/spr-social.png')
+}
+
+.share-link {
+	width: 71px;
+	height: 71px;
+	display: block;
 }
 
 .twitter-button {
