--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,18 @@ html, body {
 	margin: 0;
 	padding: 0;	
 	min-height: 600px;
+}
+
+html {
+	height: 100%;
+}
+
+body {
 	background: #006838; /* Old browsers */
 	background: -webkit-radial-gradient(top, ellipse cover,  #39b54a 0%, #006838 70%); /* Chrome10+,Safari5.1+ */
 	background: -o-radial-gradient(top, ellipse cover,  #39b54a 0%, #006838 70%); /* Opera 12+ */
 	background: -ms-radial-gradient(top, ellipse cover,  #39b54a 0%, #006838 70%); /* IE10+ */
 	background: radial-gradient(ellipse at top,  #39b54a 0%, #006838 70%); /* W3C */
-}
-
-body {
-	background: transparent;
 }
 
 p {
@@ -35,7 +38,7 @@ p {
 	width: 120px;
 	height: 60px;
 	top: 0;
-	right: 200px;
+	right: 10px;
 	z-index: 4;
 }
 
@@ -403,14 +406,15 @@ p {
 
 .score-container {
 	height: 74px;
-	margin-top: 70px;
+	padding-top: 70px;
 }
 
 .score-display {
 	width: 360px;
 	height: 74px;
 	background: url('../img/pennant-score.png') no-repeat;
-	
+	font-family: 'Lobster', cursive;
+	position: relative;
 }
 
 .score-user {
@@ -425,50 +429,53 @@ p {
 
 .score-number {
 	height: 74px;
-	width: 50px;
-	display: block;
-	font-size: 30px;
-	font-family: inherit;
-	margin-left: 12px;
 	line-height: 70px;
+	width: 74px;
+	font-size: 30px;
 	text-align: center;
 	color: #006838;
+	position: absolute;
+	top: 0;
 }
 
 .score-user .score-number {
-	float: right;
-	margin-right: 10px;
+	right: 0;
 }
 
 .score-computer .score-number {
-	float: left;
-	margin-left: 10px;
+	left: 0;
 }
 
 .score-name {
-	display: block;
-	float: left;
 	height: 74px;
+	line-height: 62px;
 	color: #fff;
-	font-size: 28px;
-	font-family: 'Lobster Regular', ;
+	display: block;
+	font-size: 40px;
 }
 
 .player-name {
-	margin: 17px 0 0 61px;
-	float: left;
+	text-indent: 61px;;
+	
 }
 
 .pc-name {
-	margin: 17px 61px 0 0;
-	float: right;
+	text-align: right;
+	padding-right: 61px;
 }
 
 .card .highlighted-attribute {
 	background-color: red;
 }
 
-
+.game-wrapper {
+	height: 100%;
+	overflow: hidden;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
 
 #share-wrapper { 
 	background-color: #fff;
