--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,24 @@ p {
 	padding: 0;
 }
 
+ul {list-style: none;}
+
+/* Webfont: Lato-Bold */
+@font-face {
+    font-family: 'Lato-Bold';
+    src: url('../font/Lato-Bold.eot'); /* IE9 Compat Modes */
+    src: url('../font/Lato-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../font/Lato-Bold.woff') format('woff'), /* Modern Browsers */
+         url('../font/Lato-Bold.ttf') format('truetype'); 
+    font-style: normal;
+    font-weight: bold;
+    text-rendering: optimizeLegibility;
+}
+
 .text-center {text-align: center;}
 .display-none {display: none}
 .mb15 {margin-bottom: 15px}
+.w170 {width: 200px}
 
 #wrapper {
 	width: 100%;
@@ -83,6 +98,12 @@ p {
 	background-image: url('../img/title-logo2.png');
 	background-repeat: no-repeat;
 	font-size: 0px;
+}
+
+.logo-link {
+	display: block;
+	width: 279px;
+	height: 126px;
 }
 
 .deck {
@@ -220,6 +241,28 @@ p {
 	border-radius: 10px;
 }
 
+.card .ribbon {
+	background-image: url('../img/round-ribbons.png');
+	position: absolute;
+	width: 63px;
+	height: 63px;
+	z-index: 4;
+}
+
+.ribbon-player {
+	top: 0;
+	left: 0;
+}
+
+.ribbon-computer {
+	top: 0;
+	right: 0;
+}
+
+.ribbon-looser {
+	background-position: -77px 0;
+}
+
 .card .cover {
 	position: absolute;
 	background: #c0c0c0;
@@ -272,9 +315,24 @@ p {
 	margin: 50px auto 0 auto;
 }
 
+::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+}
+ 
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
 .back-to-start-options {
 	/*position: absolute;*/
 	bottom: 10px;
+	color: #fff;
 }
 
 .start-options-list, .game-options {
@@ -291,6 +349,19 @@ p {
 	height: 92px;
 	cursor: pointer;
 	text-indent: 100px;
+}
+
+.replay-option {
+	width: 530px;
+	height: 92px;
+	margin: 20px auto 0 auto;
+}
+
+.replay-link {
+	display: block;
+	width: 100%;
+	height: 70px;
+	position: relative;
 }
 
 .start-label, .option-label {
@@ -349,42 +420,50 @@ p {
 	/*background: transparent url('../img/popover.png') center top no-repeat;*/
 	
 	background-size: 460px 220px;
-	padding-top: 20px;
-	height: 300px;
+	padding-top: 10px;
+	height: 210px;
 	color: #fff;
 	width: 580px;
 }
 
-.game-instructions-header {
+.game-instructions-header, .game-configurations-header {
 	position: absolute;
 	width: 582px;
 	height: 68px;
 	background-image: url('../img/blue-stripe.png');
 	text-align: center;
+	font-family: 'Lobster';
+	font-size: 40px;
+	line-height: 55px;
 }
 
-.game-instructions-body {
-	width: 460px;
+.game-instructions-body, .game-configurations-body {
+	width: 425px;
 	overflow: auto;
-	padding-top: 10px;
-	height: 220px;
+	padding: 10px 20px 0 20px;
+	height: 160px;
 	margin: 58px auto 0 auto;
 	background-image: url('../img/modal-background.png');
 	background-position: 0 -10px;
+	font-family: 'Lato';
+	text-align: center;
+	/*font-size: 12px;*/
 }
 
-.game-instructions-footer {
+.game-instructions-footer, .game-configurations-footer {
 	background-image: url('../img/modal-background.png');
-	width: 460px;
+	width: 465px;
 	margin: 0 auto;
+	font-family: 'Lato';
+	height: 24px;
+	text-decoration: none;
+	color: #fff;
 }
-
-
 
 .game-instructions p {
-	margin-bottom: 8px;
+	margin-bottom: 3px;
 	color: #fff;
-	font-size: 18px;
+	font-size: inherit;
 }
 
 .game-instructions a {
@@ -392,20 +471,18 @@ p {
 }
 
 .game-instructions .instructions-resume {
-	margin-bottom: 35px;
+	margin-bottom: 15px;
 }
 
 .game-instructions .main-title {
 	text-align: center;
-	text-decoration: underline;
-	font-size: 20px;
-	font-weight: bold;
+	font-family: 'Lato-Bold';
 }
 
 .game-instructions .title {
 	text-align: center;
-	font-size: 22px;
-	font-weight: bold;
+	
+	font-family: 'Lato-Bold';
 }
 
 .game-instructions .match-description {
@@ -416,14 +493,44 @@ p {
 	margin-top: 50px;
 }
 
+.config-list {
+	padding: 0;
+	margin: 50px 0 0 0;
+}
+
+.game-config-item {
+	text-decoration: line-through;
+}
+
+.game-config-item.isOn {
+	text-decoration: none;
+}
+
+.game-config-item {
+	font-family: 'Lato-Bold';
+	font-size: 18px;
+	cursor: pointer;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
 #round-confirm-modal {
 	position: absolute;
 	z-index: 3;
 	top: 50%;
 	left: 50%;
-	width: 100px;
-	margin-left: -100px;
-	height: 30px;
+	width: 582px;
+	margin-left: -291px;
+	height: 68px;
+	background-image: url('../img/blue-stripe.png');
+	color: #fff;
+	text-align: center;
+	font-size: 40px;
+	font-family: 'Lobster';
 }
 
 .looser {
@@ -438,11 +545,7 @@ p {
 	background-color: #000;
 }
 
-.ok-button {
-	width: 200px;
-	height: 100px;
-	font-size: 50px;
-}
+
 
 .score-container {
 	height: 74px;
@@ -519,7 +622,7 @@ p {
 
 #share-wrapper { 
 	background-color: #fff;
-	margin: 40px auto 20px auto;
+	margin: 30px auto 20px auto;
 	min-height: 625px;
 	padding: 12px 0 0 12px;
 	width: 463px;
@@ -596,11 +699,10 @@ p {
 #punchline {
 	position: absolute;
 	z-index: 5;
-	font-size: 10px;
+	font-size: 11px;
 	width: 120px;
 	margin: 40px 0 0 15px;
 	font-family: 'Lato';
-	font-weight: bold;
 }
 
 .expert #punchline {
@@ -608,30 +710,37 @@ p {
 	width: 150px;
 }
 
+#punchline span {
+	display: block;
+}
+
 #text-container {
-	margin-top: 42px;
+	margin-top: 30px;
 	height: 200px;
 }
 
 .share-title {
 	margin: 0 auto;
 	text-align: center;
-	height: 50px;
-	font-size: 50px;
+	height: 70px;
+	line-height: 70px;
+	font-size: 70px;
 	font-family: 'Oswald';
 }
 
 .share-subtitle {
-	margin: 15px auto 0 auto;
+	margin: 5px auto 0 auto;
 	text-align: center;
-	font-size: 40px;
-	font-family: 'Oswald';
+	line-height: 50px;
+	height: 50px;
+	font-size: 45px;
+	font-family: 'Oswald Light';
 }
 
 .share-description {
 	margin: 10px auto 0 auto;
 	width: 375px;
-	font-size: 11px;
+	font-size: 12px;
 	font-family: 'Lato';
 }
 
